--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,8 @@ steps:
       - '-t'
       - 'gcr.io/$PROJECT_ID/$_APP_NAME'
       - '--build-arg'
+      - 'NEXT_PUBLIC_FIREBASE_APP_ID=$_APP_ID'
       - '.'
-
 
   # Push the container image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
@@ -26,4 +26,5 @@ steps:
       - '--region'
       - '$_REGION'
       - '--allow-unauthenticated'
-      
+      - '--set-env-vars'
+      - 'NEXT_PUBLIC_API_KEY=$_API_KEY,NEXT_PUBLIC_AUTH_DOMAIN=$_AUTH_DOMAIN,NEXT_PUBLIC_PROJECT_ID=$_PROJECT_ID,NEXT_PUBLIC_STORAGE_BUCKET=$_STORAGE_BUCKET,NEXT_PUBLIC_MESSAGING_SENDER_ID=$_MESSAGING_SENDER_ID,NEXT_PUBLIC_APP_ID=$_APP_ID,NEXT_PUBLIC_API_ENDPOINT=$_API_ENDPOINT'
