--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "clsx": "^2.0.0",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "next": "latest",
     "prettier": "^3.0.3",
